<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="eSkillState" Id="{ff855ba3-e788-4b8b-a86c-048b2a85129c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE eSkillState :
(
	BEREIT	 		:= 0,				// Der Skill ist bereit einen Prozess auszuführen (Startzustand)
	LAUFEND 		:= 1,				// Der Skill führt einen Prozess aus
	ABGESCHLOSSEN 	:= 2,				// Der Prozess wurde abgeschlossen (Durch Objekt abgeschlossen)
	FEHLER			:= 3,				// Es gibt einen Fehler bezüglich des Prozesses 
	LIMITE			:= 4,				// Grenzwert wurde überschritten und Prozess wurde abgebrochen
	ERREICHT		:= 5				// Prozessziel wurde erreicht und Prozess wurde durch Skill beendet  
);	
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>