<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="eSystemCommand" Id="{92e17196-33c3-4aa3-a08b-5908cd2d45b5}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE eSystemCommand :
(
	KEINE		:= 0,
	AUSCHALTEN 	:= 1,
	EINSCHALTEN := 2,
	STOPPEN		:= 3,
	RESETTEN	:= 4
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>