<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="sSmartGreiferProzessVariablen" Id="{fc559ea4-965f-43e2-9586-969ff41f8a2f}">
    <Declaration><![CDATA[TYPE sSmartGreiferProzessVariablen :
STRUCT
	Pos				:USINT;			// Position von Greifer in mm
	Geschw			:USINT;			// Geschwindigkeit in %
	F				:USINT;			// Kraft in %
END_STRUCT
	
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>